name:                lafonten
version:             0.1.0.0
synopsis:            LambdaCube Font Engine
description:         This package provides hardware accelerated font rendering facilities built on top of LambdaCube and FontyFruity.
license:             BSD3
license-file:        LICENSE
author:              Patai Gergely
maintainer:          patai.gergely@gmail.com
copyright:           (c) 2014, Patai Gergely
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    src/test/*.hs

library
  hs-source-dirs:      src/lib
  exposed-modules:
    LambdaCube.Font.Atlas
    LambdaCube.Font.Common
    LambdaCube.Font.SimpleDistanceField
    LambdaCube.Font.CompositeDistanceField
  build-depends:
    base >=4.6,
    containers,
    vector,
    bytestring,
    bytestring-trie,
    vect,
    FontyFruity >= 0.3.2,
    lambdacube-core,
    lambdacube-edsl,
    lambdacube-gl

  default-language:    Haskell2010
