name:                lafonten
version:             0.1.0.0
synopsis:            LambdaCube Font Engine
description:         This package provides hardware accelerated font rendering facilities built on top of LambdaCube and FontyFruity.
license:             BSD3
license-file:        LICENSE
author:              Patai Gergely
maintainer:          patai.gergely@gmail.com
copyright:           (c) 2014, Patai Gergely
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    src/test/*.hs

Flag test
  Description: Enable building of demo application
  Default:     False

library
  hs-source-dirs:      src/lib
  exposed-modules:
    LambdaCube.Font.Atlas
    LambdaCube.Font.Common
    LambdaCube.Font.SimpleDistanceField
    LambdaCube.Font.CompositeDistanceField
  build-depends:
    base >=4.6,
    containers,
    vector,
    bytestring,
    bytestring-trie,
    vect,
    FontyFruity >= 0.4,
    lambdacube-core,
    lambdacube-edsl,
    lambdacube-gl

  default-language:    Haskell2010

executable lafonten-test
  if flag(test)
    Buildable: True
  else
    Buildable: False

  hs-source-dirs:     src/test 
  main-is:            HelloWorld.hs
  default-language:   Haskell2010
  build-depends:
      base
    , lafonten
    , time >= 1.5.0.1
    , bytestring-trie >= 0.2.4.1
    , vector >= 0.10.12.3
    , FontyFruity >= 0.5.3.1
    , lambdacube-gl >= 0.2.2
    , GLFW-b >= 1.4.7.3